슬라이드 페이지 작업 완료.

--- a/src/main/webapp/resources/css/user.css
+++ b/src/main/webapp/resources/css/user.css
@@ -1,5 +1,9 @@
 @charset "UTF-8";
-
+@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+/* 구글 나눔폰트 가져오기 */
+body, h1, h2, h3, h4, h5, h6, li, p {
+	font-family: "Nanum Gothic", "NanumGothic" !important;
+}
 /* HOME 슬라이더 영역 CSS */
 .slider img {
    display: block;
