--- a/src/main/webapp/resources/css/common.css
+++ b/src/main/webapp/resources/css/common.css
@@ -63,13 +63,14 @@ margin:5px 0;
 /* 푸터 영역 CSS */
 .footer {
 margin-top:30px;
+background-color:red;
 }
 .footer iframe {
 width:100%;
 height:320px;
 }
 .footer p {
-margin: 21px 0;
+margin: 0px 0;
 color: #3f51b5;
 text-align:center;
 }
