--- a/src/main/webapp/resources/home/css/common.css
+++ b/src/main/webapp/resources/home/css/common.css
@@ -245,9 +245,9 @@ footer .foot_area .snslink li + li + li a {background-image:url(../img/ico_insta
 .location_area {height:445px; background:#0068d1 no-repeat center bottom;}
 .location_area.about {}
 .location_area.customer {background : #0068d1;}
-.location_area.package {background-image:url(../img/img_top3.jpg);}
-.location_area.ticket {background-image:url(../img/img_top4.jpg);}
-.location_area.member {background-image:url(../img/img_top5.jpg);}
+.location_area.package {background : #0068d1;}
+.location_area.ticket {background : #0068d1;}
+.location_area.member {background : #0068d1;}
 .location_area h2.tit_page {padding:250px 0 0 0; margin:0 50px; border-bottom:1px solid #ccc; font:30px "Arial Narrow"; color:#fff; letter-spacing:3px;}
 .location_area h2.tit_page .in {font-variant: small-caps;}
 .location_area p.location {padding:20px 0 0 50px; color:#fff;}
